--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
     <header>
         <h1 class="logo">DWP</h1>
+        <div class="navigation">
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -14,6 +15,11 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
+    </div>
+
+        </header>
+        </header>
+        </header>
     </header>
 <main>
                 <div class="about">
