--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section id="about">
             <h2>About Me</h2>
             <!-- <img src="" alt="" class="profile-pic"> -->
-            <aside><p>My name is Gabriel, I've worked as a BlackJack Dealer but starting my career in Web Development is my biggest gamble. Just like my name, have faith in my abilities and my work will be Divine.</p></aside>
+            <h3>My name is Gabriel, I've worked as a BlackJack Dealer but starting my career in Web Development is my biggest gamble. Just like my name, have faith in my abilities and my work will be Divine.</h3>
     </div>
         </section>
     
