--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
         <div class="logo">
         <h1>DWP</h1>
         </div>
-    </header>    
-    <div class="navigation">
         <nav>
         <ul>
             <li><a href="#about">About</a></li>
@@ -20,8 +18,8 @@
             <li><a href="#contact">Contact</a></li>
         </ul>   
         </nav>
-    </div>
-        
+    </header>    
+   
     <div class="about">
         <section id="about">
             <h2>About Me</h2>
@@ -61,6 +59,6 @@
         </section>
     </div>
 
-<footer>
+<footer class="copyright">
     <p>Designed by Gabriel Saul Ostroff &COPY;2025</p>
 </footer>
