--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
     
 <body>
-    <header>
+    <header class="nav-header">
         <div class="logo">
         <h1>DWP</h1>
         </div>
@@ -20,22 +20,17 @@
         </nav>
     </header>    
    
-    <div class="about">
         <section id="about">
             <h2>About Me</h2>
             <!-- <img src="" alt="" class="profile-pic"> -->
             <h3>My name is Gabriel, I've worked as a BlackJack Dealer but starting my career in Web Development is my biggest gamble. Just like my name, have faith in my abilities and my work will be Divine.</h3>
-    </div>
         </section>
     
-    <div class="projects">
-        <section id= "projects">
+        <section id="projects">
             <h2>Projects</h2>
             <p>View my projects here</p>
         </section>
-    </div>
 
-    <div>
         <section id="skills">
             <h2>Skills</h2>
                 <ul>
@@ -45,9 +40,7 @@
                 <li>Python</li>
             </ul>
         </section>
-    </div>
 
-    <div class="contacts">
         <section id="contact">
                <h2>Contact</h2>
             <ul>
@@ -57,7 +50,7 @@
                 <li><a href="#linkedin">Linkedin</a></li>
             </ul>
         </section>
-    </div>
+   
 
 <footer class="copyright">
     <p>Designed by Gabriel Saul Ostroff &COPY;2025</p>
