--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <tile>Gabriel's Digital Portfolio</title>
     <link href="css/styles.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Tourney:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 </head>
     
 <body>
     <header class="nav-header">
-        <div class="logo">
-        <h1>DWP</h1>
-        </div>
+        <h1 class="logo">DWP</h1>
         <nav>
         <ul>
             <li><a href="#about">About</a></li>
@@ -21,19 +21,19 @@
     </header>    
    
         <section id="about">
-            <h2>About Me</h2>
+            <h2 class="about-me">About Me</h2>
             <!-- <img src="" alt="" class="profile-pic"> -->
             <h3>My name is Gabriel, I've worked as a BlackJack Dealer but starting my career in Web Development is my biggest gamble. Just like my name, have faith in my abilities and my work will be Divine.</h3>
         </section>
     
         <section id="projects">
             <h2>Projects</h2>
-            <p>View my projects here</p>
+            <h3>View my projects here</h3>
         </section>
 
         <section id="skills">
             <h2>Skills</h2>
-                <ul>
+                <ul class="my-skills">
                 <li>HTML5 Semantic Tags</li>
                 <li>CSS Flexbox</li>
                 <li>VS CODE</li>
@@ -53,5 +53,5 @@
    
 
 <footer class="copyright">
-    <p>Designed by Gabriel Saul Ostroff &COPY;2025</p>
+    <h3>Designed by Gabriel Saul Ostroff &COPY;2025</h3>
 </footer>
