--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="css/styles.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Tourney:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+   <!-- <img src="https://i.etsystatic.com/22467704/r/il/a1491f/2746724052/il_794xN.2746724052_px2h.jpg"> -->
 </head>
     
 <body>
