--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <link href="css/styles.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Tourney:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
-   <!-- <img src="https://i.etsystatic.com/22467704/r/il/a1491f/2746724052/il_794xN.2746724052_px2h.jpg"> -->
 </head>
     
 <body>
     <header class="nav-header">
         <h1 class="logo">DWP</h1>
+   <!-- <img src="https://i.etsystatic.com/22467704/r/il/a1491f/2746724052/il_794xN.2746724052_px2h.jpg"> -->
+
         <nav>
         <ul>
             <li><a href="#about">About</a></li>
@@ -29,7 +30,7 @@
     
         <section id="projects">
             <h2>Projects</h2>
-            <h3>View my projects here</h3>
+            <h3>View my projects <span class="link">here</span></h3>
         </section>
 
         <section id="skills">
