--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header class="nav-header">
         <h1 class="logo">DWP</h1>
+        <!-- <p>Divine Web Pages</p> -->
    <!-- <img src="https://i.etsystatic.com/22467704/r/il/a1491f/2746724052/il_794xN.2746724052_px2h.jpg"> -->
 
         <nav>
@@ -45,7 +46,7 @@
 
         <section id="contact">
                <h2>Contact</h2>
-            <ul>
+            <ul class="my-contacts">
                 <li><a href="#email">Email</a></li>
                 <li><a href="#github">Github</a></li>
                 <li><a href="#instagram">Instagram</a></li>
