--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="nav-header">
         <h1 class="logo">DWP</h1>
         <!-- <p>Divine Web Pages</p> -->
-   <!-- <img src="https://i.etsystatic.com/22467704/r/il/a1491f/2746724052/il_794xN.2746724052_px2h.jpg"> -->
+   <!-- <img src="https://i.etsystatic.com/22467704/r/il/a1491f/2746724052/il_794xN.2746724052_px2h.jpg" alt="Angel Wings" class="wings"> -->
 
         <nav>
         <ul>
@@ -22,18 +22,22 @@
         </ul>   
         </nav>
     </header>    
-   
+        <div class="profile">
         <section id="about">
             <h2 class="about-me">About Me</h2>
             <!-- <img src="" alt="" class="profile-pic"> -->
             <h3>My name is Gabriel, I've worked as a BlackJack Dealer but starting my career in Web Development is my biggest gamble. Just like my name, have faith in my abilities and my work will be Divine.</h3>
         </section>
-    
+        </div>
+        <br>
+        <div class="history">
         <section id="projects">
             <h2>Projects</h2>
             <h3>View my projects <span class="link">here</span></h3>
         </section>
-
+        </div>
+        <br>
+        <div class="abilities">
         <section id="skills">
             <h2>Skills</h2>
                 <ul class="my-skills">
@@ -43,7 +47,9 @@
                 <li>Python</li>
             </ul>
         </section>
-
+        </div>
+<br>
+        <div class="socials">
         <section id="contact">
                <h2>Contact</h2>
             <ul class="my-contacts">
@@ -53,7 +59,7 @@
                 <li><a href="#linkedin">Linkedin</a></li>
             </ul>
         </section>
-   
+        </div>
 
 <footer class="copyright">
     <h3>Designed by Gabriel Saul Ostroff &COPY;2025</h3>
