--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="profile">
         <section id="about">
             <h2 class="about-me">About Me</h2>
-            <!-- <img src="" alt="" class="profile-pic"> -->
+            <img src="images/IMG_0056_Original.jpg" alt="" class="profile-pic">
             <h3>My name is Gabriel, I've worked as a BlackJack Dealer but starting my career in Web Development is my biggest gamble. Just like my name, have faith in my abilities and my work will be Divine.</h3>
         </section>
         </div>
@@ -51,7 +51,7 @@
 <br>
         <div class="socials">
         <section id="contact">
-               <h2>Contact</h2>
+               <h2>Contacts</h2>
             <ul class="my-contacts">
                 <li><a href="#email">Email</a></li>
                 <li><a href="#github">Github</a></li>
