--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="logo">DWP</h1>
         <!-- <p>Divine Web Pages</p> -->
    <!-- <img src="https://i.etsystatic.com/22467704/r/il/a1491f/2746724052/il_794xN.2746724052_px2h.jpg" alt="Angel Wings" class="wings"> -->
-
+        <div class="nav-links">
         <nav>
         <ul>
             <li><a href="#about">About</a></li>
@@ -21,12 +21,13 @@
             <li><a href="#contact">Contact</a></li>
         </ul>   
         </nav>
+        </div>
     </header>    
         <div class="profile">
         <section id="about">
             <h2 class="about-me">About Me</h2>
             <img src="images/IMG_0056_Original.jpg" alt="" class="profile-pic">
-            <h3>My name is Gabriel, I've worked as a BlackJack Dealer but starting my career in Web Development is my biggest gamble. Just like my name, have faith in my abilities and my work will be Divine.</h3>
+            <h3 class="bio">My name is Gabriel, I've worked as a BlackJack Dealer but starting my career in Web Development is my biggest gamble. Just like my name, have faith in my abilities and my work will be Divine.</h3>
         </section>
         </div>
         <br>
