--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@
         <h1 class="logo">DWP</h1>
         <!-- <p>Divine Web Pages</p> -->
    <!-- <img src="https://i.etsystatic.com/22467704/r/il/a1491f/2746724052/il_794xN.2746724052_px2h.jpg" alt="Angel Wings" class="wings"> -->
-        <div class="nav-links">
         <nav>
-        <ul>
+        <ul class="nav-links">
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>   
         </nav>
-        </div>
     </header>    
         <div class="profile">
         <section id="about">
