--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 <body>
     <header class="nav-header">
         <h1 class="logo">DWP</h1>
-        <!-- <p>Divine Web Pages</p> -->
-   <!-- <img src="https://i.etsystatic.com/22467704/r/il/a1491f/2746724052/il_794xN.2746724052_px2h.jpg" alt="Angel Wings" class="wings"> -->
         <nav>
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
@@ -24,22 +22,22 @@
         <div class="profile">
         <section id="about">
             <h2 class="about-me">About Me</h2>
-            <img src="images/IMG_0056_Original.jpg" alt="" class="profile-pic">
+            <img src="images/IMG_0056_Original.jpg" alt="my-face" class="profile-pic">
             <h3 class="bio">My name is Gabriel, I've worked as a BlackJack Dealer but starting my career in Web Development is my biggest gamble. Just like my name, have faith in my abilities and my work will be Divine.</h3>
         </section>
         </div>
         <br>
         <div class="history">
         <section id="projects">
-            <h2>Projects</h2>
+            <h2 class="my-projects">Projects</h2>
             <h3>View my projects <span class="link">here</span></h3>
         </section>
         </div>
         <br>
         <div class="abilities">
         <section id="skills">
-            <h2>Skills</h2>
-                <ul class="my-skills">
+            <h2 class="my-skills">Skills</h2>
+                <ul class="skill-list">
                 <li>HTML5 Semantic Tags</li>
                 <li>CSS Flexbox</li>
                 <li>VS CODE</li>
@@ -48,18 +46,21 @@
         </section>
         </div>
 <br>
+
         <div class="socials">
         <section id="contact">
-               <h2>Contacts</h2>
-            <ul class="my-contacts">
+               <h2 class="my-contacts">Contacts</h2>
+            <ul class="contact-list">
                 <li><a href="#email">Email</a></li>
                 <li><a href="#github">Github</a></li>
                 <li><a href="#instagram">Instagram</a></li>
                 <li><a href="#linkedin">Linkedin</a></li>
+                <li><a href="#facebook">Facebook</a></li>
+                <li><a href="#twitter">Twitter</a></li>
             </ul>
         </section>
         </div>
-
+   
 <footer class="copyright">
     <h3>Designed by Gabriel Saul Ostroff &COPY;2025</h3>
 </footer>
