--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
         <section id="about">
             <h2 class="about-me">About Me</h2>
             <img src="images/IMG_0056_Original.jpg" alt="my-face" class="profile-pic">
-            <h3 class="bio">My name is Gabriel, I've worked as a BlackJack Dealer but starting my career in Web Development is my biggest gamble. Just like my name, have faith in my abilities and my work will be Divine.</h3>
+            <h3 class="bio">My name is Gabriel, after working in retail for years I learned Python from UDEMY and found not only a vaulble skill but also a new avenue into the IT FIeld, which is consistently growing and expanding. I've worked as a BlackJack Dealer but starting my career in Web Development is my biggest gamble. Just like my name, have faith in my abilities and my work will be Divine. 
+            </h3> 
         </section>
         </div>
         <br>
         <div class="history">
         <section id="projects">
             <h2 class="my-projects">Projects</h2>
-            <h3>View my projects <span class="link">here</span></h3>
+            <h3>View my previous projects <span class="link">here</span></h3>
         </section>
         </div>
         <br>
