--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <div class="history">
         <section id="projects">
             <h2 class="my-projects">Projects</h2>
-            <h3>View my previous projects <span class="link">here</span></h3>
+            <!-- <a target="_blank" href="https://ptc-web-dev.github.io/dasmoto-project-JellyBelly21/"><img src="" alt="art store" class="project-1"</a> -->
+            <!-- <h3>View my previous projects <span class="link">here</span></h3> -->
         </section>
         </div>
         <br>
