--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <tile>Gabriel's Digital Portfolio</title>
+    <title>Gabriel's Digital Portfolio</title>
     <link href="css/styles.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Tourney:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
@@ -23,9 +23,11 @@
         <div class="profile">
         <section id="about">
             <h2 class="about-me">About Me</h2>
-            <img src="images/IMG_0056_Original.jpg" alt="my-face" class="profile-pic">
-            <h3 class="bio">My name is Gabriel, after working in retail for years I learned Python from UDEMY and found not only a vaulble skill but also a new avenue into the IT FIeld, which is consistently growing and expanding. I've worked as a BlackJack Dealer but starting my career in Web Development is my biggest gamble. Just like my name, have faith in my abilities and my work will be Divine. 
-            </h3> 
+                <div class="personal">
+                <img src="images/IMG_0056_Original.jpg" alt="my-face" class="profile-pic">
+                <h3 class="bio">My name is Gabriel, after working in retail for years I learned Python from UDEMY and found not only a vaulble skill but also a new avenue into the IT FIeld, which is consistently growing and expanding. I've worked as a BlackJack Dealer but starting my career in Web Development is my biggest gamble. Just like my name, have faith in my abilities and my work will be Divine. 
+                </h3> 
+            </div>
         </section>
         </div>
         <br>
@@ -34,7 +36,7 @@
             <h2>Projects</h2>
             <p>View my early projects and works below</p>
             <div class="my-projects">
-                <br>
+        
             <div>
             <a target="_blank" href="https://jellybelly21.github.io/personal-page/"><img src="images/arcade.jpeg" alt="arcade" class="project-1"></a><p>Arcade</p>
             </div>
