--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         </ul>   
         </nav>
     </header>    
-        <div class="profile">
+        
+    <div class="container">
         <section id="about">
             <h2 class="about-me">About Me</h2>
                 <div class="personal">
@@ -30,7 +31,7 @@
         </section>
         </div>
         <br>
-        <div class="history">
+        <div class="container">
         <section id="projects">
             <h2>Projects</h2>
             <p>View my early projects and works below</p>
@@ -48,7 +49,8 @@
         </section>
         </div>
         <br>
-        <div class="abilities">
+        
+        <div class="container">
         <section id="skills">
             <h2 class="my-skills">Skills</h2>
                 <ul class="skill-list">
@@ -61,7 +63,7 @@
         </div>
 <br>
 
-        <div class="socials">
+        <div class="container">
         <section id="contact">
                <h2 class="my-contacts">Contacts</h2>
             <ul class="contact-list">
