--- a/about.html
+++ b/about.html
@@ -27,11 +27,60 @@
             <div class ="about-image">
                 <img src="images/h4oyc8qr.png" alt="angel" class="dnd-character">
             </div>
+            
             <div class="about-text">
                 <h2 class="prologue">Prologue</h2>
-                <h3 class="background">Hi! I'm Gabriel—a web development student with a story shaped by resilience, curiosity, and a deep desire to build something meaningful. My journey into tech began thanks to a generous friend, Dillion, who gifted me a Python course on Udemy. That single act opened the door to a new world—far removed from the labor jobs I’d worked for years. Dillion didn’t just hand me the keys; he stuck around to help me through the tough parts, and I’ll always be grateful. Since then, I’ve been diving headfirst into the world of IT, learning to code, solve problems, and create digital experiences that reflect my creativity and determination.</h3>
+                <h3 class="background">Hi! I'm Gabriel—a web development student with a story shaped by resilience, curiosity, and a deep desire to build something meaningful. My journey into tech began thanks to a generous friend, Dillion, who gifted me a Python course on Udemy.<br> That single act opened the door to a new world—far removed from the labor jobs I’d worked for years. Dillion didn’t just hand me the keys; he stuck around to help me through the tough parts, and I’ll always be grateful.<br> Since then, I’ve been diving headfirst into the world of IT, learning to code, solve problems, and create digital experiences that reflect my creativity and determination.</h3>
             </div>
         </section>
+<br>
+   <div>
+        <section id="skills">
+        
+            <div class="hard-skills">
+            <h2>Hard Skills</h2>
+                <ul class="hard-list">
+                <li>HTML5 Semantic Tags</li>
+                <li>CSS Flexbox</li>
+                <li>VS CODE</li>
+                <li>Python (beginner/intermediate)</li>
+                <li>Git & GitHub</li>
+                <li>Responsive Web Design</li>
+                <li>Basic SQL & Database Concepts</li>
+            </ul>
+            </div>
+            <div class="soft-skills">
+            <h2>Soft Skills</h2>
+              <ul class="soft-list">
+                <li>Problem-solving & perseverance</li>
+                <li>Team collaboration</li>
+                <li>Adaptability & willingness to learn</li>
+                <li>Creative thinking</li>
+                <li>Time management</li>
+                <li>Responsive Web Design</li>
+                <li>Basic SQL & Database Concepts</li>
+            </ul>
+            </div>
+            <div class="adaptive-skills">
+            <h2>Adaptive Skills</h2>
+              <ul class="adaptive-list">
+                <li>Ethical</li>
+                <li>Dependable</li>
+                <li>Attentive</li> 
+                <li>Perceptive</li>
+                <li>Personable</li>
+                <li>Punctual and Prompt</li>
+                <li>Motivated</li>
+                <li>Adaptable</li>
+                <li>Creative</li>
+                <li>Decisive</li>
+                <li>Takes initiative</li>
+                <li>Persuasive</li>
+            </ul>
+            </div>
+        </section>
+        </div>
+
     </main>
 
 
