--- a/about.html
+++ b/about.html
@@ -49,18 +49,35 @@
                 <li>Basic SQL & Database Concepts</li>
             </ul>
             </div>
-            <div class="soft-skills">
+            
+            <!-- <div class="soft-skills">
             <h2>Soft Skills</h2>
               <ul class="soft-list">
                 <li>Problem-solving & perseverance</li>
                 <li>Team collaboration</li>
-                <li>Adaptability & willingness to learn</li>
+                <li>Willingness to learn</li>
                 <li>Creative thinking</li>
                 <li>Time management</li>
-                <li>Responsive Web Design</li>
-                <li>Basic SQL & Database Concepts</li>
+                <li>Thinking and Research</li>
+                <li>Well spoken and articulate</li>
+                <li>Well written and concise</li>
+                <li>Visual communication skills</li>
+                <li>Brilliant organization skills</li>
+                <li>Quantitative Skills</li>
+                <li>Leadership</li>
+                <li>Phone presence</li>
+                <li>Quick learner</li>
+                <li>Multi-tasking</li>
+                <li>Prioritization</li>
+                <li>Detail-oriented</li>
+                <li>Collaborative worker</li>
+                <li>Works well under pressure</li>
+                <li>Public Speaking</li>
+                <li>Presentations</li>
+                <li>Strategizing</li>
             </ul>
             </div>
+
             <div class="adaptive-skills">
             <h2>Adaptive Skills</h2>
               <ul class="adaptive-list">
@@ -78,6 +95,78 @@
                 <li>Persuasive</li>
             </ul>
             </div>
+        </section>
+        </div> -->
+
+            <div class="container">
+            <h2>🧠Cognitive & Analytical Skills</h2>
+              <ul class="adaptive-list">
+                <li>Problem-solving & perseverance</li>
+                <li>Thinking and research</li>
+                <li>Creative thinking</li> 
+                <li>Quantitative skills</li>
+                <li>Strategizing</li>
+                <li>Decisive</li>
+            </ul>
+            </div>
+        </section>
+        </div>
+
+        <div class="container">
+            <h2>👥 Communication & Collaboration Skills</h2>
+              <ul class="adaptive-list">
+                <li>Team collaboration</li>
+                <li>Well spoken and articulate</li>
+                <li>Well written and concise</li> 
+                <li>Visual communication skills</li>
+                <li>Public speaking</li>
+                <li>Presentations</li>
+                <li>Phone presence</li>
+                <li>Persuasive</li>
+            </ul>
+            </div>
+        </section>
+        </div>
+
+        <div class="container">
+            <h2>🚀 Personal Growth Skills</h2>
+              <ul class="adaptive-list">
+                <li>Willingness to learn</li>
+                <li>Quick learner</li>
+                <li>Takes initiative</li> 
+                <li>Motivated</li>
+                <li>Adaptable</li>
+            </ul>
+        </div>
+        </section>
+        </div>
+
+        <div class="container">
+            <h2>⏱️ Organization & Productivity Skills</h2>
+              <ul class="adaptive-list">
+                <li>Time management</li>
+                <li>Multi-tasking</li>
+                <li>Prioritization</li> 
+                <li>Detail-oriented</li>
+                <li>Brilliant organization</li>
+                <li>Works well under pressure</li>
+            </ul>
+        </div>
+        </section>
+        </div>
+
+          <div class="container">
+            <h2>🌟 Character & Interpersonal Skills</h2>
+              <ul class="adaptive-list">
+                <li>Leadership</li>
+                <li>Ethical</li>
+                <li>Dependable</li> 
+                <li>Attentive</li>
+                <li>Perceptive</li>
+                <li>Personable</li>
+                <li>Punctual and prompt</li>
+            </ul>
+        </div>
         </section>
         </div>
 
