--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             
             <div class="about-text">
                 <h2 class="prologue">Prologue</h2>
-                <h3 class="background">Hi! I'm Gabriel—a web development student with a story shaped by resilience, curiosity, and a deep desire to build something meaningful. My journey into tech began thanks to a generous friend, Dillion, who gifted me a Python course on Udemy.<br> That single act opened the door to a new world—far removed from the labor jobs I’d worked for years. Dillion didn’t just hand me the keys; he stuck around to help me through the tough parts, and I’ll always be grateful.<br> Since then, I’ve been diving headfirst into the world of IT, learning to code, solve problems, and create digital experiences that reflect my creativity and determination.</h3>
+                <h3 class="background">Hi! I'm Gabriel—a web development student with a story shaped by resilience, curiosity, and a deep desire to build something meaningful.<br>My journey into tech began thanks to a generous friend, who gifted me a Python course on Udemy.<br> That single act opened the door to a new world—far removed from the labor jobs I’d worked for years.<br>My friend didn’t just hand me the keys; he stuck around to help me through the tough parts, and I’ll always be grateful.<br> Since then, I’ve been diving headfirst into the world of IT, learning to code, solve problems, and create digital experiences that reflect my creativity and determination.</h3>
             </div>
         </section>
 
@@ -279,7 +279,6 @@
 </div>
 </section>
 
-
 <div class="container">
   <h2>🎮Passions & Hobbies</h2>
   <h3>When I’m not coding, I’m immersed in worlds of imagination and strategy. I love:</h3>
@@ -306,17 +305,17 @@
 <div class="container">
   <h2>🏡Personal Plans</h2>
   <h3>
-    🎸Learning Bass Guitar — Music has always been a source of energy and emotion. Picking up the bass is my next creative challenge—one that blends rhythm, discipline, and expression.<br><br>
-    🏋️Getting Back to the Gym — After recovering from knee surgery and conquering weight loss twice, I’m ready to return to the gym with renewed focus. Strength, mobility, and health are key pillars of my journey forward.<br><br>
-    🖥️Building My Dream Gaming Setup — I’m planning to build a custom gaming PC complete with a sleek desk, ergonomic chair, and ambient lighting. It’s more than just a setup—it’s a space where creativity, relaxation, and inspiration collide.
+    <br>🎸Learning Bass Guitar<br>Music has always been a source of energy and emotion<br>Picking up the bass is my next creative challenge,<br>one that blends rhythm, discipline, and expression.<br><br>
+    🏋️Getting Back to the Gym<br>After recovering from knee surgery and conquering weight loss twice,<br>I’m ready to return to the gym with renewed focus.<br> Strength, mobility, and health are key pillars of my journey forward.<br><br>
+    🖥️Building My Dream Gaming Setup<br>I’m planning to build a custom gaming PC setup,<br>complete with a sleek desk, ergonomic chair, and ambient lighting<br>It’s more than just a setup—it’s a space where creativity, relaxation, and inspiration collide.
   </h3>
 </div>
 
 <div class="container">
   <h2>🔮Outlook on the Future</h2>
   <h3>
-    🌐The IT field is full of possibilities, and I’m excited to be part of it. Whether it’s building websites, solving problems, or creating interactive experiences, I see tech as a space where I can grow, contribute, and thrive.<br>
-    With a move to New Hampshire on the horizon and dreams of starting a family, I’m embracing the future with open arms and a full heart.<br><br>
+    <br>🌐The IT field is full of possibilities, and I’m excited to be part of it<br>Whether it’s building websites, solving problems, or creating interactive experiences,<br>I see tech as a space where I can grow, contribute, and thrive.<br>
+    With a move to New Hampshire on the horizon and dreams of starting a family,<br>I’m embracing the future with open arms and a full heart.<br><br>
     🙏Thank you for reading. I hope to work with you and bring something amazing to life.
   </h3>
     
