--- a/about.html
+++ b/about.html
@@ -196,7 +196,7 @@
     </ul>
   </div>
   <div class="container-2">
-    <h2>🏆Accomplishments & Achievements</h2>
+    <h2>🏆Accomplishments &<br> Achievements</h2>
     <ul class="list">
       <li>🥋 Earned a 2nd Degree Black Belt</li>
       <li>🏡 Became a homeowner</li>
@@ -220,7 +220,7 @@
     </ul>
   </div>
   <div class="container-2">
-    <h2>🧠Cognitive & Analytical Skills</h2>
+    <h2>🧠Cognitive &<br> Analytical Skills</h2>
     <ul class="list">
       <li>🧩Problem-solving & perseverance</li>
       <li>🔍Thinking and research</li>
@@ -231,7 +231,7 @@
     </ul>
   </div>
   <div class="container-2">
-    <h2>👥Communication & Collaboration Skills</h2>
+    <h2>👥Communication &<br> Collaboration Skills</h2>
     <ul class="list">
       <li>🤝Team collaboration</li>
       <li>🗣️Well spoken and articulate</li>
@@ -254,7 +254,7 @@
     </ul>
   </div>
   <div class="container-2">
-    <h2>⏱️Organization & Productivity Skills</h2>
+    <h2>⏱️Organization &<br> Productivity Skills</h2>
     <ul class="list">
       <li>⏳Time management</li>
       <li>🔀Multi-tasking</li>
@@ -265,7 +265,7 @@
     </ul>
   </div>
   <div class="container-2">
-    <h2>👨Character & Interpersonal Skills</h2>
+    <h2>👨Character &<br> Interpersonal Skills</h2>
     <ul class="list">
       <li>👑Leadership</li>
       <li>🧭Ethical</li>
