--- a/about.html
+++ b/about.html
@@ -17,7 +17,8 @@
         <h1 class="logo">DWP</h1>
         <nav>
         <ul class="nav-links">
-            <li><a href="#about">About</a></li>
+            <li><a href="#index.html">Home</a></li>
+            <li><a href="#about.html">About</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
