--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
         <h1 class="logo">DWP</h1>
         <nav>
         <ul class="nav-links">
-            <li><a href="#index.html">Home</a></li>
-            <li><a href="#about.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -38,150 +38,7 @@
                 <h3 class="background">Hi! I'm Gabriel—a web development student with a story shaped by resilience, curiosity, and a deep desire to build something meaningful.<br>My journey into tech began thanks to a generous friend, who gifted me a Python course on Udemy.<br> That single act opened the door to a new world—far removed from the labor jobs I’d worked for years.<br>My friend didn’t just hand me the keys; he stuck around to help me through the tough parts, and I’ll always be grateful.<br> Since then, I’ve been diving headfirst into the world of IT, learning to code, solve problems, and create digital experiences that reflect my creativity and determination.</h3>
             </div>
         </section>
-
-   <!-- <div>
-        <section id="skills">
-            <div class="container-2">
-            <h2>Education</h2>
-                <ul class="hard-list">
-                <li>High School Diploma</li>
-                <li>CNC Certification</li>
-                <li>BlackJack Dealer Certified</li>
-                <li>Associate’s Degree in Theatre</li>
-                <li>Forklift Certified</li>
-                <li>Currently enrolled in Web Development</li>
-                <li>Ongoing self-study via Udemy, freeCodeCamp, and other platforms</li>
-            </ul>
-    </div>
-
- <div>
-        <section id="skills">
-            <div class="container-2">
-            <h2>Accomplishments &</h2>
-            <h2>Achievements</h2>
-                <ul class="hard-list">
-                <li>Earned a 2nd Degree Black Belt</li>
-                <li>Became a homeowner</li>
-                <li>Moved to a new state</li>
-                <li>Lost 70 pounds—twice</li>
-                <li>Traveled to Japan</li>
-                <li>Recovered from knee surgery</li>
-                <li>Born dead—but I came back fighting</li>
-            </ul>
-    </div>
-
-    <div>
-        <section id="skills">
-            <div class="container-2">
-            <h2>Technical Skills</h2>
-                <ul class="hard-list">
-                <li>HTML5 Semantic Tags</li>
-                <li>CSS Flexbox</li>
-                <li>VS CODE</li>
-                <li>Python (beginner/intermediate)</li>
-                <li>Git & GitHub</li>
-                <li>Responsive Web Design</li>
-                <li>Basic SQL & Database Concepts</li>
-            </ul>
-    </div>
         
-        <div class="container-2">
-            <h2>Cognitive & Analytical Skills</h2>
-              <ul class="adaptive-list">
-                <li>Problem-solving & perseverance</li>
-                <li>Thinking and research</li>
-                <li>Creative thinking</li> 
-                <li>Quantitative skills</li>
-                <li>Strategizing</li>
-                <li>Decisive</li>
-            </ul>
-        </div>
-
-        <div class="container-2">
-            <h2>Communication & Collaboration Skills</h2>
-              <ul class="adaptive-list">
-                <li>Team collaboration</li>
-                <li>Well spoken and articulate</li>
-                <li>Well written and concise</li> 
-                <li>Visual communication skills</li>
-                <li>Public speaking</li>
-                <li>Presentations</li>
-                <li>Phone presence</li>
-                <li>Persuasive</li>
-            </ul>
-        </div>
-
-        <div class="container-2">
-            <h2>Personal Growth Skills</h2>
-              <ul class="adaptive-list">
-                <li>Willingness to learn</li>
-                <li>Quick learner</li>
-                <li>Takes initiative</li> 
-                <li>Motivated</li>
-                <li>Adaptable</li>
-            </ul>
-        </div>
-
-        <div class="container-2">
-            <h2>Organization & Productivity Skills</h2>
-              <ul class="adaptive-list">
-                <li>Time management</li>
-                <li>Multi-tasking</li>
-                <li>Prioritization</li> 
-                <li>Detail-oriented</li>
-                <li>Brilliant organization</li>
-                <li>Works well under pressure</li>
-            </ul>
-        </div>
-
-          <div class="container-2">
-            <h2>Character & Interpersonal Skills</h2>
-              <ul class="adaptive-list">
-                <li>Leadership</li>
-                <li>Ethical</li>
-                <li>Dependable</li> 
-                <li>Attentive</li>
-                <li>Perceptive</li>
-                <li>Personable</li>
-                <li>Punctual and prompt</li>
-            </ul>
-        </div>
-        </section>
-
-         <div class="container">
-            <h2>Passions & Hobbies</h2>
-            <h3>When I’m not coding, I’m immersed in worlds of imagination and strategy. I love:</h3>
-              <ul class="adaptive-list">
-                <li>Playing Dungeons & Dragons, video games and tabletop games</li>
-                <li>Reading manga, comics, graphic novels, and books of all kinds</li>
-                <li>Collecting figures, statues and other Geek/Nerd Paraphilia</li> 
-                <li>Watching Vtubers and Streamers</li>
-            </ul>
-            <br><h3>These hobbies fuel my creativity and help me think outside the box—skills I bring into every project.</h3>
-        </div>
-        </section>
-
-    <div class="container">
-            <h2>Career Goals</h2>
-              <ul class="adaptive-list">
-                <li>Build a strong foundation in full-stack development</li>
-                <li>Contribute to open-source projects</li>
-                <li>Land my first role in tech as a junior developer</li> 
-                <li>Eventually specialize in game development or front-end design</li>
-                <li>Inspire others who are starting from scratch—just like I did</li>
-            </ul>
-        </div>
-
-        <div class ="container">
-            <h2>Personal Plans</h2>
-                <h3>As I continue building my IT career, I’m also investing in personal growth and creative exploration. Life isn’t just about code—it’s about balance, passion, and creating spaces that inspire. Learning Bass Guitar Music has always been a source of energy and emotion. Picking up the bass is my next creative challenge—one that blends rhythm, discipline, and expression. Getting Back to the Gym After recovering from knee surgery and conquering weight loss twice, I’m ready to return to the gym with renewed focus. Strength, mobility, and health are key pillars of my journey forward. Building My Dream Gaming Setup I’m planning to build a custom gaming PC complete with a sleek desk, ergonomic chair, and ambient lighting. It’s more than just a setup—it’s a space where creativity, relaxation, and inspiration collide.</h3>
-        </div>
-
-        <div class= "container">
-            <h2>Outlook on the Future</h2>
-                <h3>The IT field is full of possibilities, and I’m excited to be part of it. Whether it’s building websites, solving problems, or creating interactive experiences, I see tech as a space where I can grow, contribute, and thrive. With a move to New Hampshire on the horizon and dreams of starting a family, I’m embracing the future with open arms and a full heart.Thank you for reading. I hope to work with you and bring something amazing to life. Let me know if you'd like this styled for your portfolio site, turned into a downloadable résumé, or broken into interactive sections. We can make it shine even brighter.</h3>
-        </div> -->
-    
 <section id="skills">
 <div class="list-2">
   <div class="container-2">
