--- a/index.html
+++ b/index.html
@@ -55,6 +55,27 @@
         </div>
         
         <div class="container">
+            <h2>My Drive</h2>
+                <p class="orbitron-text">My journey includes more than just tech.</p>
+                <p class="orbitron-text">Earning a 2nd Degree Black Belt taught me discipline, commitment, follow-through and becoming a homeowner taught me responsibility.</p>
+                <p class="orbitron-text">See what I'm made of here.</p>
+        </div>
+
+        <div class="container">
+            <h2>the Future</h2>
+            <h4 class="orbitron-text">I'm not looking for a job; i'm building a career.</h4>
+            <h4 class="orbitron-text">My goals are set of full-stack developement, front-end design, and a potential dev.</h4>
+        </div>
+
+        <div class="container">
+            <h2>Beyond the Code</h2>
+            <h4 class="orbitron-text">When I'm not coding, I'm immersed in worlds of imagination and strategy.</h4>
+            <h4 class="orbitron-text">From Dungeons & Dragons to building virtual worlds, my hobbies fuel my creativity.</h4>
+        </div>
+
+
+
+        <div class="container">
             <section id="skills">
                 <h2 class="my-skills">Skills</h2>
                     
