--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         <h1 class="logo">DWP</h1>
         <nav>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html">Lodge</a></li>
+            <li><a href="about.html">Chronicle</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#skills">Proficiencies</a></li>
+            <li><a href="#contact">Connections</a></li>
         </ul>   
         </nav>
     </header>    
         
     <div class="container">
         <section id="about">
-            <h2 class="about-me">About Me</h2>
+            <h2 class="about-me">prelude</h2>
                 <div class="personal">
                 <img src="images/IMG_0056_Original.jpg" alt="my-face" class="profile-pic">
                 <h3 class="bio">My name is Gabriel, after working in retail for years I learned Python from UDEMY and found not only a vaulble skill but also a new avenue into the IT FIeld, which is consistently growing and expanding. I've worked as a BlackJack Dealer but starting my career in Web Development is my biggest gamble. Just like my name, have faith in my abilities and my work will be Divine. 
@@ -58,7 +58,7 @@
             <h2>My Drive</h2>
                 <p class="orbitron-text">My journey includes more than just tech.</p>
                 <p class="orbitron-text">Earning a 2nd Degree Black Belt taught me discipline, commitment, follow-through and becoming a homeowner taught me responsibility.</p>
-                <p class="orbitron-text">See what I'm made of here.</p>
+                <p class="orbitron-text">See what I'm made of <a href="about.html">here.</a></p>
         </div>
 
         <div class="container">
@@ -72,8 +72,6 @@
             <h4 class="orbitron-text">When I'm not coding, I'm immersed in worlds of imagination and strategy.</h4>
             <h4 class="orbitron-text">From Dungeons & Dragons to building virtual worlds, my hobbies fuel my creativity.</h4>
         </div>
-
-
 
         <div class="container">
             <section id="skills">
