--- a/about.html
+++ b/about.html
@@ -16,17 +16,17 @@
         <h1 class="logo">DWP</h1>
         <nav>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html">Lodge</a></li>
+            <li><a href="about.html">Chronicle</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#skills">Proficiencies</a></li>
+            <li><a href="#contact">Connections</a></li>
         </ul>   
         </nav>
     </header>  
   
     <main>
-        <h1 class="about-me">ABOUT ME</h1>
+        <h1 class="about-me">Chronicle</h1>
         <section class="about-info">
             <div class ="about-image">
                 <img src="images/h4oyc8qr.png" alt="angel" class="dnd-character">
